[workspace]
members  = [ "contracts/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
cosmwasm-schema  = { version = "3.0.5" }
cosmwasm-std     = { version = "3.0.5", features = [ "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus  = { version = "3.0.1" }
cw-utils         = { version = "3.0.0" }
cw2              = { version = "3.0.0" }
schemars         = { version = "0.8.16", features = [ "enumset" ] }
serde            = { version = "1.0.193", default-features = false, features = [ "derive" ] }
serde_json       = { version = "1.0.120" }
thiserror        = { version = "1.0.52" }

injective-test-tube = { version = "1.19.0" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
